# brickletboot_xmc

./: .gitignore  README.rst
software/: CMakeLists.txt  cmake_config_default.txt
software/src/: boot.c  boot.h  bootloader_spitfp.c  bootloader_spitfp.h  firmware_entry.c  main.c  tfp_common.c  tfp_common.h
software/src/configs/: config.h  config_default_bootloader.h  config_logging.h
